<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/paddingRight"
    android:paddingRight="@dimen/paddingRight"
    android:orientation="vertical"
    android:background="@color/material_yellow_500">
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtfirstname_hint"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtlastname_hint"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtemail_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtphonenumber_hint"
        android:inputType="phone"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtpassword_hint"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/txtsubmit_hint"
       />
</LinearLayout>